# qbittorrent-helper

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  config.example.json  config.example.toml  main.py  pyproject.toml  qb_stalled_cleaner.py
.github/workflows/: pre-commit.yml  quality-checks.yml
deploy/systemd/: qb-helper.service.example  qb-helper.timer.example
qb_helper/: __init__.py  __main__.py  client.py  config.py  logging_utils.py  models.py  runner.py  state.py
qb_helper/modules/: __init__.py  base.py  disk_space_cleanup.py  stalled_cleanup.py  tag_share_limit.py  value_retention_cleanup.py
tests/: conftest.py  test_config.py  test_disk_space_cleanup.py  test_runner.py  test_stalled_cleanup.py  test_state.py  test_tag_share_limit.py  test_value_retention_cleanup.py
