[project]
name = "qbittorrent-helper"
version = "0.1.0"
description = "qBittorrent helper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.15.6",
    "ty==0.0.23",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.12"
python = ".venv"

[tool.ty.src]
include = ["main.py", "qb_helper"]
